# spc-partner-dashboard

./: .gitignore  README.md
.github/workflows/: ci-api.yml  ci-mobile.yml
.husky/: pre-commit
api/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
api/migrations/versions/: 1f46919a36cc_init.py
api/src/instance/: spc.db
api/src/spc_api/: __init__.py  config.py  extensions.py  models.py  wsgi.py
api/src/spc_api/routes/: __init__.py  auth.py  deals.py  health.py
api/src/spc_api/schemas/: __init__.py  deal.py
api/tests/: test_auth.py  test_deals.py  test_health.py
mobile/: .eslintrc.js  app.json  index.js  package-lock.json  package.json  tsconfig.json
mobile/.husky/: pre-commit
mobile/src/: App.tsx
mobile/src/components/cards/: DealCard.tsx
mobile/src/components/common/: Button.tsx
mobile/src/config/: apiConfig.ts
mobile/src/context/: AuthContext.tsx
mobile/src/hooks/: useDeals.ts  useOnlineStatus.ts
mobile/src/navigation/: AuthStack.tsx  DealsStack.tsx  MainTabs.tsx  RootNavigator.tsx
mobile/src/screens/auth/: LoginScreen.tsx
mobile/src/screens/deals/: CreateDealScreen.tsx  EditDealScreen.tsx
mobile/src/screens/main/: DashboardScreen.tsx  DealsScreen.tsx  SettingsScreen.tsx
mobile/src/services/: api.ts  deals.ts
mobile/src/theme/: colors.ts  index.tsx
mobile/src/types/: deal.ts
mobile/src/utils/: storage.ts  toast.android.ts  toast.ios.ts  toast.ts
